# AtomicFlow

./: .gitignore  .vscodeignore  LICENSE  README.md  ROADMAP.md  USER_GUIDE.md  atomic-flow-0.1.0.vsix  atomic-flow-1.0.0.vsix  atomic-flow-1.0.1.vsix  atomic-flow-1.0.2.vsix  atomic-flow-2.0.0.vsix  atomic-flow-2.0.1.vsix  atomic-flow-2.0.2.vsix  atomic-flow-2.0.3.vsix  atomic-flow-2.0.4.vsix  atomic-flow-2.0.5.vsix  atomic-flow-2.1.0.vsix  atomic-flow-2.1.1.vsix  debug.js  package-lock.json  package.json  python-live-0.2.0.vsix  python-live-0.3.0-FINAL.vsix  python-live-0.3.0.vsix  python-live-0.4.0-HANDSHAKE.vsix
atomic-flow-engine/: Cargo.toml
atomic-flow-engine/src/: layout_module.rs  main.rs  parser_module.rs
media/: index.css  index.html  main.js  style.css
src/: archLinter.ts  extension.ts  extensionLogic.ts  graphBuilder.ts  mcp-cli.ts  mcpServer.ts.bak  parser.ts  resolver.ts
src/adapters/: atomic_file_adapter.ts  atomic_html_template.ts  atomic_rust_adapter.ts  atomic_storage_adapter.ts
src/parsers/: index.ts  javascriptParser.ts  parser.interface.ts  parserFactory.ts  pythonParser.ts  rustParser.ts  vueParser.ts
src/services/: atomic_scanner_service.ts
src/utils/: path_validator.ts  template_engine.ts
webview-ui/: package-lock.json  package.json  vite.config.ts
webview-ui/src/: App.tsx  index.css  main.tsx
webview-ui/src/components/: BreadcrumbNav.tsx  CanvasBackground.tsx  Dashboard.tsx  GraphHUD.tsx  GraphVisualizer.tsx
webview-ui/src/composables/: atomic_file_node_hook.ts  use_ai_agent_dialog.ts  use_ai_analysis.ts  use_graph_layout.ts  (+9 more)
(+68 files in other folders)
