[package]
name = "atomic-flow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3


